--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,26 +39,27 @@
         android:id="@+id/btnOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="155dp"
+        android:onClick="callBack"
         android:text="Connexion"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPasse" />
 
     <Button
         android:id="@+id/btnOK2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="124dp"
+        android:layout_width="125dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="155dp"
         android:text="Inscription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtPasse" />
+        app:layout_constraintTop_toBottomOf="@+id/btnOK" />
 
     <TextView
         android:id="@+id/textView"
