--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -5,34 +5,24 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/acceuil"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/accueil" />
+            android:id="@+id/nav_accueil"
+            android:title="@string/menu_accueil" />
         <item
-            android:id="@+id/mesEsapces"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/mesEsapces" />
+            android:id="@+id/nav_mes_esapces"
+            android:title="@string/menu_mesEsapces" />
         <item
-            android:id="@+id/espacesDuJour"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/espacesDuJour" />
+            android:id="@+id/nav_espaces_du_jour"
+            android:title="@string/menu_espacesDuJour" />
         <item
-            android:id="@+id/consulterDonnees"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/consulterDonnees" />
+            android:id="@+id/nav_consulter_donnees"
+            android:title="@string/menu_consulterDonnees" />
+        <item
+            android:id="@+id/nav_calendrier"
+            android:title="@string/menu_calendrier" />
+        <item
+                android:id="@+id/nav_parametres"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="@string/menu_parametres" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/parametres"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/parametres" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
-        </menu>
-    </item>
 
 </menu>
