--- a/app/src/main/res/layout/inscription.xml
+++ b/app/src/main/res/layout/inscription.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/edtNom"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:layout_marginTop="140dp"
@@ -19,10 +19,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/edtEmail"
         android:layout_width="320dp"
         android:layout_height="45dp"
-        android:layout_marginTop="268dp"
+        android:layout_marginTop="264dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Email"
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/edtPassword"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:layout_marginTop="332dp"
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edtPrenom"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:layout_marginTop="200dp"
@@ -58,16 +58,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="66dp"
-        android:layout_marginEnd="151dp"
+        android:id="@+id/btnInscription"
+        android:layout_width="118dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="100dp"
         android:text="Inscription"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
     <TextView
         android:id="@+id/textView2"
@@ -79,7 +80,7 @@
         android:layout_marginBottom="88dp"
         android:text="Inscitpion"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintBottom_toTopOf="@+id/edtNom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
