--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_accueil">
-
-    <fragment
-        android:id="@+id/nav_accueil"
-        android:name="com.example.journal_perso.ui.accueil.AccueilFragment"
-        android:label="@string/menu_accueil"
-        tools:layout="@layout/fragment_accueil" />
+    app:startDestination="@+id/nav_espaces_du_jour">
 
     <fragment
         android:id="@+id/nav_mes_esapces"
