--- a/app/src/main/res/layout/fragment_mes_espaces.xml
+++ b/app/src/main/res/layout/fragment_mes_espaces.xml
@@ -20,10 +20,10 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="325dp"
-        android:layout_height="291dp"
+        android:layout_width="268dp"
+        android:layout_height="183dp"
         android:layout_marginStart="73dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="148dp"
         android:layout_marginEnd="73dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +35,20 @@
             android:orientation="vertical" />
     </ScrollView>
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="161dp"
+        android:text="Mes espaces :"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnCreerEspace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
@@ -51,12 +63,12 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="67dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="38dp"
         android:text="Suppression"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintStart_toEndOf="@+id/btnCreerEspace"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
@@ -64,23 +76,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="160dp"
         android:text="Modifier"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="168dp"
-        android:layout_marginEnd="161dp"
-        android:text="Mes espaces :"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
