--- a/app/src/main/res/layout/activity_configuration_indicateur.xml
+++ b/app/src/main/res/layout/activity_configuration_indicateur.xml
@@ -31,30 +31,32 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxIndicateur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="135dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="88dp"
         android:layout_marginEnd="135dp"
         android:text="Type indicateur 1"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeIndicateur" />
 
     <Switch
-        android:id="@+id/switch1"
+        android:id="@+id/switchCreneau"
         android:layout_width="102dp"
         android:layout_height="27dp"
         android:layout_marginStart="135dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="135dp"
         android:text="Créneau"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText9" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextIndicateur" />
 
     <Button
         android:id="@+id/button"
@@ -64,13 +66,14 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="135dp"
         android:text="Ajouter"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText10" />
+        app:layout_constraintTop_toBottomOf="@+id/tempsCreneau" />
 
     <EditText
-        android:id="@+id/editText10"
+        android:id="@+id/tempsCreneau"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="135dp"
@@ -78,12 +81,13 @@
         android:layout_marginEnd="135dp"
         android:ems="10"
         android:inputType="time"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1" />
+        app:layout_constraintTop_toBottomOf="@+id/switchCreneau" />
 
     <EditText
-        android:id="@+id/editText9"
+        android:id="@+id/editTextIndicateur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="135dp"
@@ -92,8 +96,23 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Type indacteur 2"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxIndicateur" />
+
+    <EditText
+        android:id="@+id/nomIndicateur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="100dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Nom indicateur"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/typeIndicateur" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
