--- a/app/src/main/res/layout/activity_configuration_indicateur.xml
+++ b/app/src/main/res/layout/activity_configuration_indicateur.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextIndicateur" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonAjoutIndicateur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="135dp"
