--- a/app/src/main/res/layout/activity_configuration_indicateur.xml
+++ b/app/src/main/res/layout/activity_configuration_indicateur.xml
@@ -26,9 +26,11 @@
         android:layout_marginStart="54dp"
         android:layout_marginTop="38dp"
         android:layout_marginEnd="54dp"
+        android:prompt="@string/tIndic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        android:spinnerMode="dialog"/>
 
     <CheckBox
         android:id="@+id/checkBoxIndicateur"
@@ -103,6 +105,7 @@
 
     <EditText
         android:id="@+id/nomIndicateur"
+        android:tag="monIndicateur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
@@ -110,7 +113,6 @@
         android:layout_marginEnd="100dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Nom indicateur"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeIndicateur" />
