--- a/app/src/main/res/layout/fragment_mes_espaces.xml
+++ b/app/src/main/res/layout/fragment_mes_espaces.xml
@@ -32,7 +32,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+            <ListView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="161dp" />
+        </LinearLayout>
     </ScrollView>
 
     <TextView
