--- a/app/src/main/res/layout/fragment_mes_espaces.xml
+++ b/app/src/main/res/layout/fragment_mes_espaces.xml
@@ -60,12 +60,12 @@
         android:layout_marginTop="27dp"
         android:layout_marginEnd="67dp"
         android:text="Créer un espace"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintEnd_toStartOf="@+id/btnSuppEspace"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnSuppEspace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
