--- a/app/src/main/res/layout/activity_mon_espace.xml
+++ b/app/src/main/res/layout/activity_mon_espace.xml
@@ -6,18 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".monEspace">
 
-    <LinearLayout
-        android:id="@+id/LayoutMonEsp"
-        android:layout_width="354dp"
-        android:layout_height="205dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="1dp"
-        android:orientation="vertical"
+    <ScrollView
+        android:layout_width="256dp"
+        android:layout_height="149dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7">
+
+        <LinearLayout
+            android:id="@+id/LayoutMonEsp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
     <TextView
         android:id="@+id/textView7"
@@ -37,12 +42,11 @@
         android:id="@+id/btnModif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="159dp"
+        android:layout_marginStart="276dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="47dp"
         android:text="Modifier"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,13 +54,13 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="60dp"
         android:text="Ajour d'un indicateur"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnAjout"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -64,13 +68,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="320dp"
+        android:layout_marginTop="80dp"
         android:clickable="true"
         android:src="@drawable/ic_add_black_24dp"
         app:backgroundTint="#03A9F4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintHorizontal_bias="0.204"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -79,7 +82,7 @@
         android:layout_width="233dp"
         android:layout_height="46dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="50dp"
         android:text="Mon espace"
         android:textAlignment="center"
@@ -87,5 +90,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageRetour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="37dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/actionModeCloseDrawable" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
