--- a/app/src/main/res/layout/fragment_calendrier.xml
+++ b/app/src/main/res/layout/fragment_calendrier.xml
@@ -41,15 +41,10 @@
         app:layout_constraintTop_toBottomOf="@+id/calendarView">
 
         <LinearLayout
+            android:id="@+id/maLayoutCalendrier"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ListView
-                android:id="@+id/listCalendrier"
-                android:layout_width="match_parent"
-                android:layout_height="126dp" />
-        </LinearLayout>
+            android:orientation="vertical" />
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
