--- a/app/src/main/res/layout/fragment_espaces_du_jour.xml
+++ b/app/src/main/res/layout/fragment_espaces_du_jour.xml
@@ -5,15 +5,31 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/text_espaces_du_jour"
-        android:layout_width="match_parent"
+        android:id="@+id/textV_espJour"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="175dp"
+        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="284dp"
+        android:layout_height="239dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textV_espJour">
+
+        <LinearLayout
+            android:id="@+id/maLayoutEspJ"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
