--- a/app/src/main/res/layout/inscription.xml
+++ b/app/src/main/res/layout/inscription.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,8 +11,8 @@
         android:layout_height="45dp"
         android:layout_marginTop="140dp"
         android:ems="10"
+        android:hint="Nom"
         android:inputType="textPersonName"
-        android:text="Nom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +24,7 @@
         android:layout_marginTop="264dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Email"
+        android:hint="Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +37,7 @@
         android:layout_marginTop="332dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Password"
+        android:hint="Mot de passe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,14 +50,14 @@
         android:layout_marginTop="200dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Prénom"
+        android:hint="Prénom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnInscription"
+        android:id="@+id/btnFenInscription"
         android:layout_width="118dp"
         android:layout_height="39dp"
         android:layout_marginStart="100dp"
@@ -78,7 +77,7 @@
         android:layout_marginTop="33dp"
         android:layout_marginEnd="172dp"
         android:layout_marginBottom="88dp"
-        android:text="Inscitpion"
+        android:text="Inscription"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/edtNom"
         app:layout_constraintEnd_toEndOf="parent"
