--- a/app/src/main/res/layout/activity_configuration_indicateur.xml
+++ b/app/src/main/res/layout/activity_configuration_indicateur.xml
@@ -87,14 +87,15 @@
 
     <EditText
         android:id="@+id/nomIndicateur"
-        android:tag="monIndicateur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="100dp"
         android:ems="10"
+        android:hint="Nom de l'indicateur"
         android:inputType="textPersonName"
+        android:tag="monIndicateur"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeIndicateur" />
